...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/editBatchCode"
        android:text="@string/reagentBatch"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editExpiryDate"
        android:text="@string/reagentExpiry"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
...
